# mamba

./: .prettierignore  .prettierrc  README.md  brainstorming.md  components.json  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  user_story_template.md  vite.config.ts
.github/: copilot-instructions.md
src/: App.tsx  index.css  main.tsx
src-python/virtual-mouse/: README.md  pyproject.toml
src-python/virtual-mouse/src/: main.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sql/: init.sql
src-tauri/src/: lib.rs  main.rs
src/application/usecases/: get-navigation.ts  get-welcome-message.ts
src/domain/assistant/: errors.ts  model.ts  repository.ts  value-objects.ts
src/domain/budget-category/: model.ts  repository.ts
src/domain/expense/: model.ts  repository.ts
src/domain/income/: model.ts  repository.ts
src/domain/income-category/: model.ts  repository.ts
src/domain/monthly-budget/: errors.ts  model.ts  repository.ts  value-objects.ts
src/domain/navigation/: errors.ts  model.ts  repository.ts
src/domain/user/: errors.ts  model.ts  repository.ts  value-objects.ts
src/domain/virtual-mouse/: errors.ts  model.ts  repository.ts
src/infrastructure/logger/: logger.ts
src/infrastructure/repositories/: assistant-ai-adapter.ts  assistant-model-repository.ts  assistant-repository.ts  navigation-repository.ts  navigation.json  user-repository.ts
src/locales/: i18n.ts
src/presentation/: index.css  routeTree.gen.ts
(+69 files in other folders)
